--- a/.gitmodules
+++ b/.gitmodules
@@ -31,5 +31,4 @@
 	url = https://github.com/discord/discord-rpc.git
 [submodule "deps/asmjit"]
 	path = deps/asmjit
-	url = https://github.com/Joelrau/asmjit.git
-	branch = old-state
+	url = https://github.com/asmjit/asmjit.git
